Task:2.1 Introduced APIs for Medication | Including Exception Handling and Test cases